finalized controllers tests
