# app/models/ent/migrate/schema.go
@@ -108,6 +108,9 @@ var (
 		{Name: "removed", Type: field.TypeBool, Default: false},
 		{Name: "created_at", Type: field.TypeTime},
 		{Name: "updated_at", Type: field.TypeTime},
+		{Name: "subscription_ids", Type: field.TypeJSON},
+		{Name: "team_ids", Type: field.TypeJSON},
+		{Name: "organization_ids", Type: field.TypeJSON},
 	}
 	// UsersTable holds the schema information for the "users" table.
 	UsersTable = &schema.Table{
